hello user cahnged

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div id="dashboardPage" class="page active">
             <header class="dashboard-header">
                 <div class="greeting">
-                    <h2>Hello, User!!</h2>
-                    <p>Welcome back!</p>
+                    <h2>Hello, Sabarinathan Selvaraj!</h2>
+                    <p>Welcome back!, Let's tackle the spends!</p>
                 </div>
                 <div class="header-actions">
                     <button class="icon-btn glass-card" id="refreshBtn" title="Refresh Data">
@@ -648,5 +648,6 @@
 
 <script src="script.js"></script>
 </body>
+
 
 </html>
